--- a/src/app/pages/Home/Home.component.html
+++ b/src/app/pages/Home/Home.component.html
@@ -2,7 +2,7 @@
   <div class="grid">
     @for (pokemon of pokemons; track pokemon.id) {
       <div class="grid-card">
-        <app-PokemonCard [name]="pokemon.name" [description]="getDescription(pokemon.flavor_text_entries)" [number]="pokemon.id.toString()"
+        <app-PokemonCard [id]="pokemon.id" [name]="pokemon.name" [description]="getDescription(pokemon.flavor_text_entries)" [number]="pokemon.id.toString()"
           [imageUrl]="pokemon.sprites.front_default" [types]="pokemon.types"></app-PokemonCard>
       </div>
     }
