--- a/src/app/pages/Pokemon/Pokemon.component.scss
+++ b/src/app/pages/Pokemon/Pokemon.component.scss
@@ -11,6 +11,7 @@ main {
   padding: 40px;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
 
   .hidden {
