--- a/src/app/components/PokemonCard/PokemonCard.component.scss
+++ b/src/app/components/PokemonCard/PokemonCard.component.scss
@@ -133,6 +133,9 @@ $button-hover-color: #d5d5d5;
     }
 
     .know-more-btn {
+      all: unset;
+
+      width: fit-content;
       border: none;
       font-size: 14px;
       cursor: pointer;
