--- a/src/app/pages/Home/Home.component.scss
+++ b/src/app/pages/Home/Home.component.scss
@@ -20,4 +20,51 @@ main {
       }
     }
   }
+
+  .search {
+    gap: 12px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+
+    .search-bar {
+      width: 100%;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      border-radius: 10px;
+      background-color: #f5f5f5;
+      box-shadow: 0px 4px 18.5px 2px #00000040;
+    }
+
+    .search-input {
+      width: 100%;
+      border: none;
+      color: #555;
+      outline: none;
+      padding: 10px;
+      font-size: 16px;
+      background: none;
+    }
+
+    .search-button {
+      width: 58.5px;
+      border: none;
+      display: flex;
+      height: 58.5px;
+      color: white;
+      cursor: pointer;
+      border-radius: 10px;
+      align-items: center;
+      justify-content: center;
+      background-color: #ff5a5f;
+      box-shadow: 0px 4px 20.3px 2px #00000040;
+    }
+
+    .search-button .material-symbols-outlined {
+      font-size: 24px;
+    }
+  }
+
 }
