chore(pages): add pages title

--- a/src/app/components/PokemonCard/PokemonCard.component.html
+++ b/src/app/components/PokemonCard/PokemonCard.component.html
@@ -16,7 +16,7 @@
       <p class="description">
         {{ description }}
       </p>
-      <a class="know-more-btn" [routerLink]="'/details/' + id">
+      <a class="know-more-btn" [routerLink]="'/details/' + id" [queryParams]="{ name }">
         Know More
       </a>
     </div>
