chore(pages): page responsiveness

--- a/src/app/pages/Home/Home.component.html
+++ b/src/app/pages/Home/Home.component.html
@@ -1,4 +1,9 @@
+<app-AppHeader></app-AppHeader>
+
 <main>
+  <div class="logo">
+    <app-LogoPokedex [width]="logoWidth"></app-LogoPokedex>
+  </div>
   <div class="search">
     <div class="search-bar">
       <input
