--- a/src/app/pages/Pokemon/Pokemon.component.html
+++ b/src/app/pages/Pokemon/Pokemon.component.html
@@ -1,11 +1,13 @@
-<header>
+<app-AppHeader></app-AppHeader>
+
+<div class="subheader">
   <a [routerLink]="['/']" [fragment]="id" class="back-btn">
     <span class="material-symbols-outlined">
       arrow_back
     </span>
     <p>Back</p>
   </a>
-</header>
+</div>
 
 <main>
   <div class="card">
