chore(pokemon): formatting weight and height of pokemons

--- a/src/app/pages/Pokemon/Pokemon.component.html
+++ b/src/app/pages/Pokemon/Pokemon.component.html
@@ -49,11 +49,11 @@
         <div class="sizes">
           <div class="size">
             <p>Height: </p>
-            <span>{{ pokemon?.height }}</span>
+            <span>{{ heightFormatted(pokemon?.height) }}</span>
           </div>
           <div class="size">
             <p>Weight: </p>
-            <span>{{ pokemon?.weight }}</span>
+            <span>{{ weightFormatted(pokemon?.weight) }}</span>
           </div>
         </div>
       </div>
