chore(config): angular boilerplate

--- a/src/app/components/PokemonCard/PokemonCard.component.html
+++ b/src/app/components/PokemonCard/PokemonCard.component.html
@@ -16,12 +16,9 @@
       <p class="description">
         {{ description }}
       </p>
-      <a class="know-more-btn" [routerLink]="'/details/' + id" [queryParams]="{ name }">
-        Know More
-      </a>
+      <a class="know-more-btn" [routerLink]="'/details/' + id" [queryParams]="{ name }"> Know More </a>
     </div>
 
-    <img [src]="imageUrl" [alt]="name"
-      class="image" />
+    <img [src]="imageUrl" [alt]="name" class="image" />
   </div>
 </div>
