--- a/src/app/pages/Pokemon/Pokemon.component.scss
+++ b/src/app/pages/Pokemon/Pokemon.component.scss
@@ -182,7 +182,7 @@ main {
           max-width: 160px;
           padding: 8px 16px;
           border-radius: 10px;
-          background-color: #F6F8FC;
+          background-color: #f6f8fc;
           justify-content: space-between;
 
           p {
@@ -217,27 +217,27 @@ main {
           }
 
           .hp {
-            background-color: #DF2140;
+            background-color: #df2140;
           }
 
           .attack {
-            background-color: #FF994D;
+            background-color: #ff994d;
           }
 
           .defense {
-            background-color: #EECD3D;
+            background-color: #eecd3d;
           }
 
           .special-attack {
-            background-color: #85DDFF;
+            background-color: #85ddff;
           }
 
           .special-defense {
-            background-color: #96DA83;
+            background-color: #96da83;
           }
 
           .speed {
-            background-color: #FB94A8;
+            background-color: #fb94a8;
           }
         }
       }
@@ -255,7 +255,7 @@ main {
           font-size: 17px;
           padding: 8px 16px;
           border-radius: 10px;
-          background-color: #F6F8FC;
+          background-color: #f6f8fc;
           justify-content: space-between;
 
           p {
